# nabot

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
containers/: Dockerfile  Taskfile.yml  entrypoint.sh
src/nabot/: main.py
